[tool.poetry]
name = "grk"
description = "a silly tool to query cloud-init repo metadata"
version = "0.0.1"
readme = "README.md"
authors = [ "Brett Holman" ]
license = "GPL-2.0-only"
packages = [{include = "src"}]
classifiers = [
	"License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
	"Development Status :: 3 - Alpha",
	"Natural Language :: English",
	"Intended Audience :: Developers",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
]

[tool.poetry.dependencies]
python = "^3.7"
gql = {version = "3.5.0", extras = ["requests"]}
tabulate = "0.9.0"


[tool.poetry.scripts]
grok = "src.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
